examples/test/testpolicy18140.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18140
  namespace: namespace94
spec:
  podSelector:
    matchLabels:
      key28: value35
      key25: value24
      key38: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value10
          key22: value40
          key5: value45
      podSelector:
        matchLabels:
          key4: value21
          key24: value21
